# fastapi-start

./: .gitignore  main.py  pyproject.toml
