[tool.poetry]
name = "fastapi-start"
version = "0.1.0"
description = ""
authors = ["10152884 <chldlswl1212@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.18.2"
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
